--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,9 +29,9 @@
 			<li><a href="https://github.com/nabirdinani">Github</a></li>
 			<li><a href="mailto:nabirdinani@gmail.com">Email</a></li>
 		</ul>
-
+	<% if !user_signed_in? %>
 		<p class="sign_in">Admin Login</p>
-
+	<% end %>
 	</div>
 
 	<div id="main_content">
@@ -43,10 +43,13 @@
 			<% else %>
 				<%= link_to "Back to All Posts", root_path %></li>
 			<% end %>
+
+		<% if user_signed_in? %>
 			<div class="buttons">
 				<button class="button"><%= link_to "New Post", new_post_path %></button>
 				<button class="button">Log Out</button>
 			</div>
+		<% end %>
 		</div>
 
 		<% flash.each do |name, msg| %>
