--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -6,7 +6,7 @@
 	<div id="content">
 		<h1>Hey, I'm Nabir Dinani</h1>
 		<p>This is day 2 of my 12 Web Apps in 12 days.</p>
-		<p>This week I built a blog in Rails 4. You're actually on the demo application right now. Cool stuff, right!.</p>
-		<p>If you'd like to checkout the project there here is the link <a href="https://github.com/nabirdinani/day2-blog">Day 2 - blog</a> </p>
+		<p>Today I will built a blog using Ruby On Rails. You're actually on the demo application right now. Cool stuff, right!.</p>
+		<p>If you'd like to checkout the project here is the link <a href="https://github.com/nabirdinani/day2-blog">Day 2 - blog</a> </p>
 	</div>
 </div>
